--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Tools"]
 	path = Tools
 	url = https://github.com/broomburgo/Tools-objc.git
+[submodule "Raven"]
+	path = Raven
+	url = https://github.com/broomburgo/raven-objc.git
